@@ -27,6 +27,7 @@ import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Random;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -40,7 +41,10 @@ import static org.springframework.http.HttpStatus.NOT_FOUND;
  * <p>规则（循序渐进）：
  * <ul>
  *   <li><b>REVIEW</b>：本方向内到期（dueAt&lt;=now）且已掌握的概念，按到期时间升序，封顶 {@link #REVIEW_CAP}；</li>
- *   <li><b>NEW</b>：本方向内未掌握概念按 layer 升序（L1 先行），封顶 {@link #NEW_PER_PLAN}；</li>
+ *   <li><b>NEW</b>：按「层掌握率递进解锁」选可出层，等概率抽层，封顶 {@link #NEW_PER_PLAN}。
+ *       层掌握率 = 该层内写达标（mastery_level&gt;=2）的概念数 / 该层概念总数；
+ *       L1 达标 50% 才解锁 L2，L2 达标 50% 才解锁 L3，以此类推——一开始 L1 没掌握就只出 L1 的题，
+ *       用户手动指定层级（「练这一层」）不受此门槛限制。</li>
  *   <li>落表 PENDING → 线程池异步出题（复用 {@link QuestionService} 去重/跨知识点逻辑）→ READY。</li>
  * </ul>
  *
@@ -56,6 +60,11 @@ public class DailyPlanService {
     private static final int NEW_PER_PLAN = 3;
     /** 每个方向每天复习（到期）的概念数上限 */
     private static final int REVIEW_CAP = 8;
+
+    /** 层解锁门槛：上一层掌握率达标比例（L1 达标 50% 才解锁 L2，以此类推） */
+    private static final double LAYER_UNLOCK_RATIO = 0.5;
+    /** 写达标线：mastery_level >= 2 才算该层掌握 */
+    private static final int MASTERED_LEVEL = 2;
 
     private final DailyTaskRepository taskRepo;
     private final StudyPlanRepository planRepo;
@@ -246,16 +255,81 @@ public class DailyPlanService {
                 .toList();
     }
 
-    /** 新学候选：本方向未掌握概念按 layer 升序（L1 先行，循序渐进），封顶 cap */
-    private List<Concept> pickNew(Long userId, Long planId, int cap) {
-        Set<Long> masteredIds = masteryRepo.findByUserId(userId).stream()
+    /**
+     * 新学候选：按「层掌握率递进解锁」选可出层，等概率抽层，层内按出现顺序取未掌握概念，封顶 cap。
+     *
+     * <p>解锁链：层 L 可出，当且仅当它之下<b>所有存在</b>的层掌握率都 &gt;= 50%
+     * （层掌握率 = 写达标概念数 / 该层概念总数）。若某层没有未掌握概念，则该层不参与抽层；
+     * 可出层全空则本次不新学（不强凑）。随机种子含 (userId, planId, 日期)，同一天结果可复现。
+     * 包级可见：供单测直接验证。
+     */
+    List<Concept> pickNew(Long userId, Long planId, int cap) {
+        List<Concept> all = conceptRepo.findByStudyPlanId(planId);
+        if (all.isEmpty()) {
+            return List.of();
+        }
+        List<Mastery> mastery = masteryRepo.findByUserId(userId);
+        Set<Long> masteredIds = mastery.stream()
                 .filter(m -> m.getMasteryLevel() > 0)
                 .map(Mastery::getConceptId).collect(Collectors.toSet());
-        return conceptRepo.findByStudyPlanId(planId).stream()
+
+        // 未掌握概念按层分组（层内保持查询顺序 = 按 id）
+        Map<Integer, List<Concept>> poolByLayer = all.stream()
                 .filter(c -> !masteredIds.contains(c.getId()))
-                .sorted(Comparator.comparingInt(Concept::getLayer).thenComparing(Concept::getId))
-                .limit(cap)
-                .toList();
+                .collect(Collectors.groupingBy(Concept::getLayer));
+        // 每层掌握率
+        Map<Integer, Double> ratioByLayer = all.stream()
+                .collect(Collectors.groupingBy(Concept::getLayer, Collectors.toList()))
+                .entrySet().stream()
+                .collect(Collectors.toMap(Map.Entry::getKey,
+                        e -> layerRatio(mastery, e.getValue())));
+        List<Integer> layerAsc = ratioByLayer.keySet().stream().sorted().toList();
+
+        // 解锁链：层 L 可出 ⇔ 它之下所有存在的层掌握率都 >= 50%，且本层还有未掌握概念
+        List<Integer> available = new ArrayList<>();
+        for (int i = 0; i < layerAsc.size(); i++) {
+            boolean gated = false;
+            for (int j = 0; j < i; j++) {
+                if (ratioByLayer.get(layerAsc.get(j)) < LAYER_UNLOCK_RATIO) {
+                    gated = true;
+                    break;
+                }
+            }
+            if (!gated && !poolByLayer.getOrDefault(layerAsc.get(i), List.of()).isEmpty()) {
+                available.add(layerAsc.get(i));
+            }
+        }
+        if (available.isEmpty()) {
+            return List.of();
+        }
+
+        // 每个名额独立等概率抽层（可出 L1/L2 → 各 50%；L1/L2/L3 → 各 1/3），层内按 id 顺序取
+        Random rng = new Random(seed(userId, planId, LocalDate.now()));
+        List<Concept> out = new ArrayList<>();
+        while (out.size() < cap) {
+            List<Integer> still = available.stream()
+                    .filter(l -> !poolByLayer.get(l).isEmpty())
+                    .toList();
+            if (still.isEmpty()) break;
+            int layer = still.get(rng.nextInt(still.size()));
+            out.add(poolByLayer.get(layer).remove(0));
+        }
+        return out;
+    }
+
+    /** 层掌握率：写达标（level>=2）概念数 / 该层概念总数；空层视为 100%（不阻塞下层解锁） */
+    private double layerRatio(List<Mastery> mastery, List<Concept> concepts) {
+        if (concepts.isEmpty()) return 1.0;
+        Set<Long> ids = concepts.stream().map(Concept::getId).collect(Collectors.toSet());
+        long mastered = mastery.stream()
+                .filter(m -> ids.contains(m.getConceptId()) && m.getMasteryLevel() >= MASTERED_LEVEL)
+                .count();
+        return (double) mastered / concepts.size();
+    }
+
+    /** 同一天结果可复现（含日期），便于排查今日任务为何这样排 */
+    private long seed(Long userId, Long planId, LocalDate date) {
+        return userId * 1_000_003L + planId * 31L + date.toEpochDay();
     }
 
     /**
